--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,10 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"/>
 
+    <ProgressBar
+        android:id="@+id/progressNar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
 
