设置进度条的可见性visibility
Signed-off-by: ZoeWangW <13438165026@163.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:src="@mipmap/ic_launcher"/>
 
     <ProgressBar
-        android:id="@+id/progressNar"
+        android:id="@+id/progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
